--- a/practices/amazon/amazon.html
+++ b/practices/amazon/amazon.html
@@ -1,11 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amazon Clone Practice</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Amazon Clone Practice</title>
+    <!-- This code is needed for responsive design to work.
+      (Responsive design = make the website look good on
+      smaller screen sizes like a phone or a tablet). -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Load a font called Roboto from Google Fonts. -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Here are the CSS files for this page. -->
+    <link rel="stylesheet" href="./styles/shared/general.css" />
+    <link rel="stylesheet" href="./styles/shared/amazon-header.css" />
+    <link rel="stylesheet" href="./styles/pages/amazon.css" />
+  </head>
+  <body>
+    <header class="amazon-header">
+      <a class="header-link" href="amazon.html">
+        <img class="amazon-header-img" src="./images/amazon-logo-white.png" />
+        <img
+          class="amazon-header-img-mobile"
+          src="./images/amazon-mobile-logo-white.png"
+        />
+      </a>
+
+      <div class="search-container">
+        <input class="search-bar" type="text" placeholder="Search" />
+        <div class="search-icon-container">
+          <img class="search-icon" src="./images/icons/search-icon.png" />
+        </div>
+      </div>
+
+      <div class="amazon-header-right-section">
+        <a class="order-container" href="amazon.html">
+          <div class="returns-text">Returns</div>
+          <div class="orders-text">& Orders</div>
+        </a>
+        <a class="cart-container" href="amazon.html">
+          <img class="cart-icon" src="./images/icons/cart-icon.png" />
+          <div class="cart-text">Cart</div>
+          <div class="cart-quantity">3</div>
+        </a>
+      </div>
+    </header>
+
+    <main>
+      <section class="products-grid">
+        <div class="product-container">
+          <div class="product-image-container">
+            <img
+              class="product-image"
+              src="./images/products/athletic-cotton-socks-6-pairs.jpg"
+            />
+          </div>
+
+          <p class="product-name limit-text-to-2-lines">
+            Black and Gray Athletic Cotton Socks - 6 Pairs
+          </p>
+
+          <div class="product-rating-container">
+            <img
+              class="product-rating-stars"
+              src="./images/ratings/rating-45.png"
+            />
+            <button class="product-rating-count link-primary">87</button>
+          </div>
+
+          <p class="product-price">$10.90</p>
+
+          <select class="product-quantity" name="quantity" id="quantity">
+            <option selected value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+
+          <button class="add-to-cart-button button-primary">Add to Cart</button>
+        </div>
+
+        <div class="product-container"></div>
+        <div class="product-container"></div>
+      </section>
+    </main>
+  </body>
 </html>
